<resources>
    <string name="app_name">Tip Calc</string>
    <string name="cost_of_service">cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="enter_custom_percentage">Enter custom percentage</string>
    <string name="custom_percentage">Custom Percentage</string>
    <string name="enter_amount">enter amount</string>
    <string name="enter_the_cost">Enter the cost</string>
    <string name="enter_custom_tip">Enter custom tip</string>
</resources>